# mdam

./: .gitignore  PROJECT_STRUCTURE.md  README.md
magic_state_cultivation/: .gitignore  README.md  consolidate_ic_results.py  convert_s_to_t.py  dump_e2e_circuits.py  generate_cost_tables.py  plot_results.py  pyproject.toml  run_end2end_bruteforce.py  run_ic_tiered.py
magic_state_cultivation/dumped_circuits/: s_proxy_d3_e2e_p0.001.stim  s_proxy_d5_e2e_p0.001.stim  t_gate_d3_e2e_p0.001.stim  t_gate_d5_e2e_p0.001.stim
magic_state_cultivation/lib/: dual_decoder.py  importance_sampling.py
magic_state_cultivation/results/end2end/: s_proxy_d3_p0.0005.json  s_proxy_d3_p0.001.json  s_proxy_d3_p0.002.json  s_proxy_d5_p0.001.json  s_proxy_d5_p0.002.json  t_gate_d3_p0.0005.json  t_gate_d3_p0.001.json  t_gate_d3_p0.002.json  t_gate_d5_p0.001.json  t_gate_d5_p0.002.json
magic_state_cultivation/results/inject_cultivate/: analysis.json  s_proxy_d3_k0.json  s_proxy_d3_k1.json  s_proxy_d3_k10.json  s_proxy_d3_k11.json  s_proxy_d3_k12.json  s_proxy_d3_k2.json  s_proxy_d3_k3.json  s_proxy_d3_k4.json  s_proxy_d3_k5.json  s_proxy_d3_k6.json  s_proxy_d3_k7.json  s_proxy_d3_k8.json  s_proxy_d3_k9.json  (+52 more)
qec_bench/: BENCHMARKS.md  README.md  bench_common.py  generate_axis_noise.py  generate_circuits.py  generate_table.py  pyproject.toml  run_all.py  save_table_circuits.py  tsim_compile_check.py
qec_bench/circuits/: coherent_d3_r3.stim  coherent_d5_r5.stim  coherent_d7_r1.stim  coherent_d7_r7.stim  coherent_rx_d3_r1.stim  coherent_rx_d3_r3.stim  coherent_rx_d5_r1.stim  coherent_rx_d5_r5.stim  coherent_ry_d3_r1.stim  coherent_ry_d3_r3.stim  coherent_ry_d5_r1.stim  coherent_ry_d5_r5.stim
qec_bench/configs/: tsim_modes.json
qec_bench/results/: clifft.csv  stim.csv  tsim.csv
qv_bench/: README.md  pyproject.toml  results.csv
qv_bench/qv_bench/: __main__.py  plot_qv.py  run_benchmark.py  validate_hop.py  worker.py
(+574 files in other folders)
