[project]
name = "magic-state-cultivation-repro"
version = "0.1.0"
description = "S-proxy vs T-gate magic state cultivation fidelity comparison using Clifft"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "magic-state-cultivation",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pymatching>=2.3.1",
    "scipy>=1.15.0",
    "sinter>=1.14.0",
    "stim>=1.15.0",
]

[project.optional-dependencies]
plot = ["rsmf>=0.2.1"]

[tool.uv.sources]
magic-state-cultivation = { path = "vendor/src", editable = true }

# clifft must be installed separately (requires cmake build config):
# uv pip install --config-settings-package clifft:cmake.define.CLIFFT_MAX_QUBITS=512 \
#     "git+https://github.com/unitaryfoundation/clifft.git@v0.1.0"

[tool.uv]
package = false
